fixed white space
in CSS

--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -4,7 +4,7 @@
     background-position: center;
     height: 1000px;
     color: white;
-    margin-top: -3%;
+
 }
 
 
@@ -61,7 +61,7 @@ h2{
 h1{
   font-weight: 700px;
   font-size: 5em;
-      
+
   text-shadow: 0px 4px 3px rgba(0,0,0,0.3),
           0px 6px 9px rgba(0,0,0,0.1),
           0px 11px 15px rgba(0,0,0,0.1)
